<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">212BDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth">bluetooth connection</string>
    <string name="bluetooth_connected">bluetooth is connected</string>
    <string name="bluetooth_disconnected">bluetooth is not connected</string>
    <string name="bluetooth_connect_fail">bluetooth connected failed</string>
    <string name="obd_init">OBD initialization</string>
    <string name="control_command">control command</string>
    <string name="monitor_command">monitor control command</string>
    <string name="setting_parameter">parameters set/query</string>
    <string name="data_stream">the terminal data flow</string>
    <string name="control_clear_dtc">clear DTC</string>
    <string name="control_clear_obd">clear OBD data buffer</string>
    <string name="control_obd_resetting">Reset OBD</string>
    <string name="control_factory_setting">restore to factory settings</string>
    <string name="setting_alarm">alarm monitor parameters</string>
    <string name="setting_regular">fixed upload parameters</string>
    <string name="setting_oil_wear">fuel consumption parameters</string>
    <string name="setting_plate_number">vehicle plate</string>
    <string name="setting_sn">device serial number</string>
    <string name="setting_time">device time</string>
    <string name="setting_warning">system beep status</string>
    <string name="setting_delay">engine off delay time</string>
    <string name="setting_rfid">RFID function and beeps</string>
    <string name="read_version">device firmware and hardware version</string>
    <string name="read_dtc">DTC</string>
    <string name="read_data_type">vehicle supported data flow</string>
    <string name="read_vin">vehicle VIN code</string>
    <string name="data_travel">trip data</string>
    <string name="data_operating_condition">PID</string>
    <string name="data_snapshot">snapshot</string>
    <string name="data_monitor">monitor data</string>
    <string name="alarm_01">speeding</string>
    <string name="alarm_02">low voltage</string>
    <string name="alarm_03">High engine coolant temperature</string>
    <string name="alarm_04">Hard acceleration</string>
    <string name="alarm_05">Hard deceleration</string>
    <string name="alarm_06">Idle engine</string>
    <string name="alarm_07">towing</string>
    <string name="alarm_08">high RPM</string>
    <string name="alarm_09">power on</string>
    <string name="alarm_0A">Exhaust Emission</string>
    <string name="alarm_0B">Quick Lane change</string>
    <string name="alarm_0C">Sharp turn</string>
    <string name="alarm_0D">Fatigue driving</string>
    <string name="alarm_0E">crash</string>
    <string name="time">time</string>
    <string name="current_time">current time</string>
    <string name="choose">select</string>
    <string name="query">query</string>
    <string name="setup">set</string>
    <string name="setup_fail">set failed</string>
    <string name="setup_success">set successfully</string>
    <string name="query_fail">query failed</string>
    <string name="input_value">please input data</string>
    <string name="loading">loading...</string>
    <string name="success">successful</string>
    <string name="fail">fail</string>
    <string name="begin">start</string>
    <string name="submit">confirm</string>
    <string name="cancel">cancel</string>
    <string name="type">type</string>
    <string name="value">value</string>
    <string name="alarm_switch">alarm switch</string>
    <string name="alarm_sound">alarm beeps</string>
    <string name="on">on(01)</string>
    <string name="off">off(00)</string>
    <string name="regular_gps">GPS data switch</string>
    <string name="regular_obd_data">OBD data switch</string>
    <string name="regular_gsensor">G-Sensor data switch</string>
    <string name="regular_time">fixed upload time interval</string>
    <string name="regular_obd_data_time">OBD data sampled time interval</string>
    <string name="regular_obd_data_type">OBD sampled types</string>
    <string name="device_id">device ID</string>
    <string name="trip_flag">trip data type</string>
    <string name="data_umber">the serial number of data uploaded</string>
    <string name="trip_id">tripID</string>
    <string name="trip_mileage">total trip mileage</string>
    <string name="protocol_type">vehicle diagnose protocol</string>
    <string name="trip_fuel">total trip fuel consumption</string>
    <string name="car_state">vehicle status</string>
    <string name="gps_lists">GPS data list</string>
    <string name="gps_time">GPS time</string>
    <string name="gps_lat">GPS latitude</string>
    <string name="gps_long">GPS longitude</string>
    <string name="speed">GPS speed</string>
    <string name="direction">GPS direction</string>
    <string name="lat_flag">latitude flag</string>
    <string name="long_flag">longitude flag</string>
    <string name="location_flag">GPS location flag</string>
    <string name="starts">located satelites</string>
    <string name="obd_data_list">OBD data list</string>
    <string name="freeze_data">freeze frame data</string>
    <string name="surport_pid">supported PID data</string>
    <string name="dtc_list">DTC type</string>
    <string name="dtc_data">alarm data</string>
    <string name="alarm_type">alarm type</string>
    <string name="curent_value">current value</string>
    <string name="threshold">the set threshold value of alarms</string>
    <string name="pid_2105">engine coolant temperature</string>
    <string name="pid_210B">Intake manifold absolute pressure</string>
    <string name="pid_210C">engine RPM</string>
    <string name="pid_210D">vehicle speed</string>
    <string name="pid_210F">Intake air temperature</string>
    <string name="pid_2110">Air flow rate from mass air flow sensor</string>
    <string name="pid_unit_metre">m</string>
    <string name="pid_unit_litre">L</string>
    <string name="pid_unit_temperature">℃</string>
    <string name="pid_unit_pressure">kPa</string>
    <string name="pid_unit_speed">rpm/min</string>
    <string name="pid_unit_rpm">km/h</string>
    <string name="pid_unit_gallons">g/100s</string>
    <string name="pid_unit_v">V</string>
    <string name="pid_unit_g">g</string>
    <string name="pid_unit_min">min</string>
    <string name="pid_unit_h">h</string>
    <string name="details">detail</string>
    <string name="trip_0">trip start package</string>
    <string name="trip_1">trip data fixed upload</string>
    <string name="trip_2">supported PID data</string>
    <string name="trip_3">freeze frame data</string>
    <string name="trip_4">snapshot</string>
    <string name="trip_5">STORE DTC</string>
    <string name="trip_6">PENGDING DTC</string>
    <string name="trip_7">alarm start</string>
    <string name="trip_8">alarm end</string>
    <string name="trip_9">trip end package</string>
    <string name="gasoline">gas</string>
    <string name="diesel_oil">diesel</string>
    <string name="displecement">engine capacity</string>
    
    <string name="read_pid">read PID</string>
    <string name="select_pid">select PID(Not more than 10)</string>

</resources>