<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/setting_regular" />

        <LinearLayout
            android:id="@+id/ll_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tv_switch_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_gps" />

                <RadioGroup
                    android:id="@+id/rg_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_switch_gps"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_gps_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rb_gps_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:checked="true"
                        android:text="@string/off" >
                    </RadioButton>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/tv_switch_obd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_obd_data" />

                <RadioGroup
                    android:id="@+id/rg_obd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_switch_obd"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_obd_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rb_obd_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:checked="true"
                        android:text="@string/off" >
                    </RadioButton>
                </RadioGroup>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/tv_switch_gsensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regular_gsensor" />

                <RadioGroup
                    android:id="@+id/rg_gsensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_switch_gsensor"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rb_gsensor_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rb_gsensor_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:checked="true"
                        android:text="@string/off" >
                    </RadioButton>
                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/et_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regular_time" />

        <EditText
            android:id="@+id/et_data_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/regular_obd_data_time" />

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
            android:id="@+id/et_data_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1.0"
            android:hint="@string/regular_obd_data_type" />
            
            <Button
            android:id="@+id/btn_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/setup" />

        <Button
            android:id="@+id/btn_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/query" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="5dp"
            android:textColor="#ff0000" />
    </LinearLayout>

</ScrollView>