<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_pid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_pid" />

        <TextView
            android:id="@+id/tv_pid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="5dp"
            android:textColor="#ff0000" />

        <LinearLayout
            android:id="@+id/ll_monitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/btn_select_pid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_pid" />
            
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="5dp"
                android:textColor="#ff0000" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>